<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        app:key="@string/pref_media"
        app:title="@string/pref_title_media"/>

    <PreferenceCategory app:title="@string/pref_category_headline">

	    <SeekBarPreference
	        app:key="@string/pref_autoScrollDelay"
	        app:title="@string/pref_title_autoScrollDelay"
	        app:showSeekBarValue="true"
	        app:min="1"
	        android:max="600"
	        app:defaultValue="150"/>

	    <SeekBarPreference
	        app:key="@string/pref_scrollDuration"
	        app:title="@string/pref_title_scrollDuration"
	        app:showSeekBarValue="true"
	        app:min="1"
	        android:max="50"
	        app:defaultValue="15"/>

	    <SeekBarPreference
	        app:key="@string/pref_scrollBy"
	        app:title="@string/pref_title_scrollBy"
	        app:showSeekBarValue="true"
	        app:min="1"
	        android:max="10"
	        app:defaultValue="10"/>

	    <SeekBarPreference
	        app:key="@string/pref_mediaFontSize"
	        app:title="@string/pref_title_mediaFontSize"
	        app:showSeekBarValue="true"
	        app:min="10"
	        android:max="100"
	        app:defaultValue="60"/>

	    <SeekBarPreference
	        app:key="@string/pref_headlineFontSize"
	        app:title="@string/pref_title_headlineFontSize"
	        app:showSeekBarValue="true"
	        app:min="10"
	        android:max="100"
	        app:defaultValue="45"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
